--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-mixin": "4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-calendars": "^1.17.4",
+    "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.4.3",
     "react-native-image-progress": "^1.0.1",
     "react-native-lightbox": "^0.7.0",
@@ -47,6 +48,7 @@
     "redux-persist": "4.8.3",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "toggle-switch-react-native": "^1.0.0",
     "victory-native": "0.18.2",
     "yarn": "^1.3.2"
   },
